@@ -6,6 +6,8 @@ Version 8.03 26-Mar-2010
 
 1.  Added support for (*MARK:ARG) and for ARG additions to PRUNE, SKIP, and 
     THEN.
+    
+2.  (*ACCEPT) was not working when inside an atomic group. 
 
 
 Version 8.02 19-Mar-2010
